unpackaged/main/default/objects/ETST_Address__c/ETST_Address__c.object-meta.xml
<CustomObject>
    <label>Address</label>
    <nameField>
        <displayFormat>ADDR-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>