unpackaged/main/default/objects/ETST_Address__c/fields/ET_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Address_Type__c</fullName>
    <label>Address Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BILL_TO</fullName>
            </value>
            <value>
                <fullName>SHIP_TO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>