unpackaged/main/default/objects/ETST_Address__c/fields/ET_City__c.field-meta.xml
<CustomField>
    <fullName>ET_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>