unpackaged/main/default/objects/ETST_Address__c/fields/ET_Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>ET_Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>