unpackaged/main/default/objects/ETST_Address__c/fields/ET_Line_1__c.field-meta.xml
<CustomField>
    <fullName>ET_Line_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>