unpackaged/main/default/objects/ETST_Address__c/validationRules/Nomore_than_one_shipping_address_primary.validationRule-meta.xml
<ValidationRule>
    <fullName>Nomore_than_one_shipping_address_primary</fullName>
    <active>true</active>
    <errorConditionFormula>IF( 
AND(Account__r.ET_PrimaryShippingCount__c &gt; 1, 
TEXT(ET_Address_Type__c) = &#39;SHIP_TO&#39;, 
ET_Is_Primary__c = true), 
true, 
false)</errorConditionFormula>
    <errorMessage>Primary shipping address must only be one per customer.</errorMessage>
</ValidationRule>